fixed margins, regrouped text blocks to use gap easier, refactored where the paddings come from

--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ a:visited {
 	color: #000050;
 }
 
+/*
 a: inactive{
 	color: #cccccc;
-}
+}*/
 
 #outline {
 	display: flex;
@@ -152,58 +153,95 @@ li a.active {
 	/*width: 1000px;*/
 	max-width: 100%;
 	margin: 0px;
-	padding: 0px; 
+	/*padding: 0px; */
 	align: center;
 	text-align: justify; 
 	border: 3px double #580000;
 	color: #580000;
 	background-color: #FFEFD9;
+
+	/*this way you dont have to add the margin-left on all of the fonts.*/
+	padding: 32px;
+	gap:32px
 }
 
+/* You are not using this*/
+/*
 #text h1 {
 	text-align:left;
 	margin-left: 0.5em;
 	font-size:2em;
 	font-weight: bold;
 	font-variant: small-caps;
-	/*height: 25px;*/
-}
+}*/
 
 #text h2 {
 	text-align:left;
-	margin-left: 1em;
+	/* this gets rid of the problem that you had*/
+	margin: 0px;
+	/* You don't need this anymore because we have the padding on text*/
+	/*margin-left: 1em;*/
 	font-size:1.2em;
 	font-weight: normal;
+	
 	/*height: 15px;*/
 }
 
+/* You are not using this*/
+/*
 #text h3 {
 	text-align:left;
 	margin-left: 1.5em;
 	font-size:1em;
 	font-weight: normal;
-	/*height: 10px;*/
+}*/
+
+.section-container{
+	display: flex;
+	flex-direction: column;
+	gap: 16px
+}
+
+.text-block{
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	/* This adds the padding immediately in, so you dont have to add that seperately on
+	p, h2, ul, etc. */
+	padding-left: 2em;
+	padding-right: 2em
 }
 
 #text p {
     display: inline-block;
     line-height: 120%;
-    padding-left: 3em;
-    padding-right: 3em;
+	/* text-block makes all the padding now */
+    /*padding-left: 3em;
+    padding-right: 3em;*/
     flex: auto;
+	/* this gets rid of the problem that you had*/
+	margin: 0px;
 }
 
 #text ul {
 	display: inline-block;
 	list-style-type:circle;
 	line-height: 1.2em; 
-    padding-left: 3em;
-    padding-right: 3em;
+    /* text-block makes all the padding now */
+    /*padding-left: 3em;
+    padding-right: 3em;*/
+	/* this gets rid of the problem that you had*/
+	margin: 0px;
+	/* without this, it adds some extra padding on the left for some reason*/
+	padding-left: 0px;
+	
 }
 
 #text li {
 	/*display:block;*/
 	/*height:1.2em;*/
+	/* this gets rid of the problem that you had*/
+	margin: 0px;
 }
 
 #text ul.a {
